统一线程池管理 + Actuator健康检查
1. 统一线程池管理:
   - ThreadConfig: 3种执行器(virtual/bounded/scheduled)
   - VirtualThreadTaskExecutor: 虚拟线程包装器
   - ConcurrentWriteService: 注入boundedPoolExecutor + scheduledExecutor
   - WebhookService: consumerThread改用Thread.ofVirtual
   - WebSocketClient: receiver/sender改用Thread.ofVirtual
   - LlmClient: 注入VirtualThreadTaskExecutor

2. Actuator可观测性:
   - StorageHealthIndicator: 存储层健康检查
   - AppInfoContributor: 应用元数据端点
   - application.yml: 完善Actuator配置
   - SecurityConfig: 放行actuator端点
   - micrometer-registry-prometheus依赖

3. Graceful Shutdown:
   - server.shutdown: graceful
   - spring.lifecycle.timeout-per-shutdown-phase: 30s